--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-facebook-pixel": "^1.0.4"
+    "react-facebook-pixel": "^1.0.4",
+    "react-loading-skeleton": "^3.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
